--- a/etc/eyefiserver.conf
+++ b/etc/eyefiserver.conf
@@ -36,7 +36,8 @@ geotag_accuracy:140000
 # /home/myblog/pictures/%%Y-%%m-%%d
 # notice the double percent sign to escape % from ini interpolation
 
-upload_dir:/home/david/Pictures/eye-fi/%%Y-%%m
+upload_dirs_0:/home/david/Pictures/eye-fi/%%Y-%%m
+upload_dirs_1:/home/david/Pictures/eye-fi/%%Y-%%m
 
 # The UID of the user that you want to own the uploaded images (if commented out, ownership of files will not be changed)
 upload_uid:0
