Added an option to insert GPS EXIF meta data into JPG files
The exiv2 command line tool is required for the new functionality to
work.

--- a/etc/eyefiserver.conf
+++ b/etc/eyefiserver.conf
@@ -31,6 +31,13 @@ geotag_lag:3600
 # Use acquired geolocation data with accuracy over this value, in meters
 geotag_accuracy:140000
 
+# Insert GPS data into the JPG file as EXIF meta data instead of leaving an XMP file for each file.
+# LOG and XMP files will be removed after successful GPS data insertion.
+# Requires that the exiv2 command line tool is installed.
+# Download exiv2 source: http://www.exiv2.org/download.html
+# Build/install exiv2 instructions: http://dev.exiv2.org/projects/exiv2/wiki/Building_on_Ubuntu_using_Automake
+geotag_jpeg_insert:0
+
 # When connecting, all files are downloaded in one directory
 # the name of the directory can be a strftime formatted string like 
 # /home/myblog/pictures/%%Y-%%m-%%d
